[package]
name = "moyaposylka"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = {version ="4",features = ["cargo"]}
prettytable = "0.10.0"
reqwest = {version ="0.12", features = ['json',"blocking"]}
serde = {version = "1.0", features = ["derive"]}
tokio = {version ="1.46.1",features = ["full"]}
